@@ -1,6 +1,7 @@
 0.3.1
 ~~~~~
 o Fixed the ioprio syscall detection when running on i386/x86_64
+o Fixed interaction between --accumulated and --only
 
 0.3
 ~~~
